--- a/root-html-file/index.html
+++ b/root-html-file/index.html
@@ -10,11 +10,14 @@
     <script type="systemjs-importmap">
       {
         "imports": {
+          "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/5.5.0/system/single-spa.min.js",
+          "single-spa-layout": "https://unpkg.com/single-spa-layout@1.0.0-beta.2/dist/system/single-spa-layout.min.js",
+          "react": "https://cdn.jsdelivr.net/npm/react@16.13.1/umd/react.production.min.js",
+          "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@16.13.1/umd/react-dom.production.min.js",  
           "app1": "http://localhost:4201/main.js",
           "app2": "http://localhost:4202/main.js",
           "navbar": "http://localhost:4300/main.js",
-          "single-spa": "https://cdnjs.cloudflare.com/ajax/libs/single-spa/5.5.0/system/single-spa.min.js",
-          "single-spa-layout": "https://unpkg.com/single-spa-layout@1.0.0-beta.2/dist/system/single-spa-layout.min.js"
+          "endsystems": "http://localhost:8080/Test-endsystems.js"
         }
       }
     </script>
@@ -41,9 +44,9 @@
           <route path="app2">
             <application name="app2"></application>
           </route>
-          <!-- <route path="app2/dashboard">
-            <application name="app2"></application>
-          </route> -->
+          <route path="endsystems">
+            <application name="endsystems"></application>
+          </route>
          
         </div>
       </single-spa-router>
